# sheetsui

./: .envrc  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  flake.nix  result  tmp.bash
docs/: SUI_FORMAT.md  command.md  edit.md  file-formats.md  index.md  intro.md  navigation.md  visual.md
examples/: test.csv  test.icalc  test.xlsx
planning/: project-memory.md
src/: main.rs
src/book/: mod.rs  sui.rs  test.rs
src/sheet/: formula.rs  mod.rs  tests.rs
src/ui/: cmd.rs  mod.rs  render.rs  test.rs
src/ui/help/: mod.rs
src/ui/render/: dialog.rs  markdown.rs  mod.rs  test.rs  viewport.rs
